# whisp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  fmcs-history  notes.txt
cmake/: SetupConfigs.cmake
examples/: fibonacci.fmc  linked_lists.fmc  sieve_of_eratosthenes.fmc  variables.fmc
libs/antlr4/cmake/: ExternalAntlr4Cpp.cmake
src/: Main.cpp  fmcS.pch
src/antlr/: fmcSGrammar.cpp  fmcSGrammar.g4  fmcSGrammar.h  fmcSGrammar.interp  fmcSGrammar.tokens  fmcSGrammarBaseListener.cpp  fmcSGrammarBaseListener.h  fmcSGrammarListener.cpp  fmcSGrammarListener.h  fmcSLexer.cpp  fmcSLexer.g4  fmcSLexer.h  fmcSLexer.interp  fmcSLexer.tokens
src/ast/: Printer.hpp  Tree.cpp  Tree.hpp  TreeBuilder.hpp  Visitor.hpp
src/compile/: Compiler.hpp
src/interp/: Machine.cpp  Machine.hpp  Writer.cpp  Writer.hpp
src/vm/: Vm.hpp
std/: std.fmc
